1.修改页面验证权限 修改页面查询

--- a/HouseManage/HouseManage/Views/DailyCheck/CreateCheckResult.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/CreateCheckResult.cshtml
@@ -286,7 +286,7 @@
         };
         var qualified = true;//检查内容详情是否有不合格项
         for (var a in temp) {
-            qualified = qualified && (temp[a] == 1);
+            qualified = qualified && (temp[a].VALUE == 1);
         };
         if (radiovalue == null || radiovalue == "") {
             window.alert("检查结果不能为空！");
