修改Linux时间Format，修改注册跳转增加延迟

--- a/HouseManage/HouseManage/Views/Orders/Order.cshtml
+++ b/HouseManage/HouseManage/Views/Orders/Order.cshtml
@@ -33,11 +33,11 @@
                 {
                     <div class="mui-input-row">
                         <label>有效期起</label>
-                        <input type="text" value="@d.YXQS" readonly>
+                        <input type="text" value="@d.YXQS.ToString("yyyy-MM-dd")" readonly>
                     </div>
                     <div class="mui-input-row">
                         <label>有效期止</label>
-                        <input type="text" value="@d.YXQZ" readonly>
+                        <input type="text" value="@d.YXQZ.ToString("yyyy-MM-dd")" readonly>
                     </div>
                 }
                 if (d.JFLX == "1")
