修改用户查询订单单价错误BUg,修改用户注册跳转BUG

--- a/HouseManage/HouseManage/Views/User/Register.cshtml
+++ b/HouseManage/HouseManage/Views/User/Register.cshtml
@@ -69,11 +69,9 @@
                     //redirect
                     mui.toast('绑定成功！');
                     mui.showLoading("准备跳转...", "div");
-                    //实时刷新时间单位为毫秒   /* 刷新查询 */
-                    setInterval(function refreshQuery() {
+                    setTimeout(function () {
                         window.location.href = jq("#url").val();
-                    }, 1500);
-                    return;
+                    }, 2000);
                 } else {
                     if (result.code == 50001) {
                         mui.alert('您当前的手机号未绑定任何用户，请联系管理员。', '提示', function () {
